Layout: Fix minimum vertical height on short pages.
This code assumes a margin for the admin bar, header, and local nav (from when they were all sticky). The only margin on the container now is the admin bar, causing an extra white space below the footer on very short pages. This fixes the issue by calculating the height correctly.

--- a/source/wp-content/themes/wporg-parent-2021/sass/base/_layout.scss
+++ b/source/wp-content/themes/wporg-parent-2021/sass/base/_layout.scss
@@ -2,7 +2,7 @@
 .wp-site-blocks {
 	display: flex;
 	flex-direction: column;
-	min-height: calc(100vh - var(--wp-global-header-offset, 0px) - var(--local-header-height, 0px));
+	min-height: calc(100vh - var(--wp-admin--admin-bar--height, 0px));
 	overflow-wrap: break-word;
 
 	> main,
